# lazy_vulkan_gltf

./: CMakeLists.txt  Cargo.toml
JoltC/: Functions.h
JoltCImpl/: JoltC.cpp
examples/: models.rs
examples/shaders/: main.frag  main.frag.spv  main.vert  main.vert.spv  vert.glsl
src/: lib.rs  mesh.rs
test_assets/: bullet.glb  cornellBox.gltf  cube.glb
