[package]
name = "lazy_vulkan_gltf"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1.23.1"
glam = "0.30.5"
gltf = { version = "1.4.1", features = ["names", "utils"] }
lazy_vulkan = { version = "0.1.0", path = "../lazy_vulkan" }
png = "0.17.16"

[dev-dependencies]
env_logger = "0.11.8"

[target.'cfg(unix)'.dev-dependencies]
winit = { version = "0.30", default-features = false, features = [
    "x11",
    "rwh_06",
] }

[target.'cfg(not(unix))'.dev-dependencies]
winit = { version = "0.30", default-features = false, features = ["rwh_06"] }
