[package]
name = "lazy_vulkan_gltf"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1.23.1"
glam = "0.30.5"
gltf = { version = "1.4.1", features = ["names", "utils"] }
lazy_vulkan = { git="https://github.com/leetvr/lazy_vulkan.git", rev="f4958ef997fc5d19fbfa2ca6ea34695f24c10986" }
# lazy_vulkan.path = "../lazy_vulkan"
log = "0.4.28"
png = "0.17.16"

[dev-dependencies]
env_logger = "0.11.8"

[target.'cfg(unix)'.dev-dependencies]
winit = { version = "0.30", default-features = false, features = [
    "x11",
    "rwh_06",
] }

[target.'cfg(not(unix))'.dev-dependencies]
winit = { version = "0.30", default-features = false, features = ["rwh_06"] }
